--- a/discuss/lib/discuss_web/templates/topic/index.html.eex
+++ b/discuss/lib/discuss_web/templates/topic/index.html.eex
@@ -3,13 +3,15 @@
 <ul class="collection">
   <%= for topic <- @topics do %>
     <li class='collection-item'>
-      <%= topic.title %>
-      <div class="right">
-        <%= link "X", to: Routes.topic_path(@conn, :delete, topic), method: :delete %>
-      </div>
-      <div class="right">
-        <%= link "Edit", to: Routes.topic_path(@conn, :edit, topic) %>
-      </div>
+      <%= link topic.title, to: Routes.topic_path(@conn, :show, topic) %>
+      <%= if @conn.assigns.user.id == topic.user_id do %>
+        <div class="right">
+          <%= link "X", to: Routes.topic_path(@conn, :delete, topic), method: :delete %>
+        </div>
+        <div class="right">
+          <%= link "Edit", to: Routes.topic_path(@conn, :edit, topic) %>
+        </div>
+      <% end %>
     </li>
   <% end %>
 </ul>
